# ccw-hvac_model

./: .gitignore  README.md  README_OLD.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_actual_data.csv  test_api.py
backend/: Dockerfile  requirements.txt
backend/app/: calibration.py  main.py
backend/app/api/: routes.py
backend/app/models/: building_energy_model.py  presets.py
backend/app/schemas/: __init__.py
config/: modern_office_results_20251119_114145.csv  old_office_results_20251119_114145.csv
doc/: QUICKSTART.md  USER_MANUAL.md  calibration_guide.md  energy_calculation.md  user_guide.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActualDataTable.tsx  ComparisonChart.tsx  ConfigForm.tsx  MonthlyConditionsTable.tsx  ParameterSelector.tsx  PresetSelector.tsx  ResultsChart.tsx
frontend/src/types/: index.ts
src/: app.py  presets.py  sample_run.py  test_building_energy_model.py
